oxiplate-derive/tests/broken/extends/extends-crlf.stderr
error[E0609]: no field `title` on type `&AbsoluteData`
 --> templates/extends-wrapper-crlf.html.oxip
  |
  | <title>{{ title }}</title>
  |           ^^^^^ unknown field
